# choices

./: .dockerignore  .editorconfig  .env.admin  .eslintrc.cjs  .eslintrc.type-aware.cjs  .gitignore  .gitleaks.toml  .gitmodules  .npmrc  .pre-commit-config.yaml  .tool-versions  .trivyignore  ACCOMPLISHMENTS-NOV-5-2025.md  ACTUAL_TABLE_USAGE_AUDIT.md  ADMIN_ACCESS_SECURITY.md  ADMIN_ACTIVATION_PLAN.md  ADMIN_SETUP_SUMMARY.md  ADMIN_SYSTEM_ACTIVATION_COMPLETE.md  AGENTS.md  AGENT_A1_CORE_AUTH_SECURITY_TYPES.md  AGENT_A2_COMPREHENSIVE_REVIEW.md  AGENT_A2_DATABASE_CORE_SERVICES_TYPES.md  AGENT_A3_ELECTORAL_CIVICS_DATA_TYPES.md  AGENT_A4_VOTING_ENGINE_SOCIAL_FEATURES_TYPES.md  AGENT_A5_A_PLUS_IMPLEMENTATION.md  AGENT_A5_FRONTEND_INTEGRATION_CLEANUP.md  AGENT_A5_FRONTEND_INTEGRATION_CLEANUP_REVIEW.md  AGENT_COORDINATION_SYSTEM.md  AGENT_COORDINATION_SYSTEM_IMPLEMENTATION_SUMMARY.md  AGENT_GUIDE_2025.md  AGENT_HANDOFF.md  AGENT_IMPLEMENTATION_COMPLETE.md  AGENT_ONBOARDING.md  AGENT_P_COMPREHENSIVE_FINDINGS_AND_TODOS.md  AGENT_R_COMPLETION_REPORT.md  AGGRESSIVE_CLEANUP_COMPLETE.md  AI_STANDARDS.md  ANALYTICS_SYSTEM_DOCUMENTATION.md  API-KEYS-SECURITY.md  API-RATE-LIMITS.md  (+426 more)
.agents/: AUTH_SECURITY_HANDOFF.md  README.md
.cursor/: AGENT_CHECKLIST.md  AGENT_COMMANDS.md  AGENT_GUIDE.md  AGENT_RULES.md  CURSOR_CONFIG_UPDATE_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  agents.md  context.md  custom-instructions.md  mcp.json  run-govinfo-mcp.sh  team-rules.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SUPPORT.md  WORKFLOWS_AUDIT.md  (+5 more)
(+9164 files in other folders)
