[project]
name = "choices-e2e-audit"
version = "0.1.0"
description = "CLI to orchestrate E2E audits: pre-steps, Playwright run, and report aggregation."
authors = [{name="Choices QA", email="qa@example.com"}]
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0.1"]

[project.scripts]
choices-audit = "choices_e2e_audit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"